--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   path_provider: ^2.0.10
   bloc: ^8.0.3
   flutter_bloc: ^8.0.1
+  cached_network_image: ^3.2.1
 
 dev_dependencies:
   flutter_test:
